Visual enhancement: Make progress bar invisible if duration is 0. Visual enhancement: fixed and changed several access path to the img/transparent.png invisible image.

--- a/css/styles.css
+++ b/css/styles.css
@@ -786,6 +786,13 @@ div.__progress {
 	border: 1px solid #C0C1DA;
 }
 
+div.__progress_invisible {
+	overflow: hidden;
+	width: 100px;
+	height: 10px;
+	border: 0px none transparent;
+}
+
 div.__progress div.__elapsed {
 	float: left;
 	height: 8px;
